# the-little-prince

./: CMakeLists.txt
shader/: color.frag  color.vert  rect.frag  rect.vert
src/: Main.cpp  Util.cpp  Util.h
